--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -19,12 +19,14 @@ body {
 body {
   display: flex;
   flex-direction: column;
-  font-family: 'Rubik', sans-serif;
-  font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 22px;
   font-weight: 400;
-  line-height: 1.3;
-  background-color: $whiteff;
+  line-height: 1.2;
+  background-color: #1F1F1F;
+  
 }
+// font-family: 'Fjalla One', sans-serif;
  
 .main {
   flex-grow: 1;
@@ -32,6 +34,6 @@ body {
  
 .container {
   max-width: 1200px;
-  padding: 0 15px;
+  padding: 0 10px;
   margin: 0 auto;
 }
