header and video sections

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -24,7 +24,10 @@ body {
   font-weight: 400;
   line-height: 1.2;
   background-color: #1F1F1F;
-  
+}
+
+.body--active {
+  overflow: hidden;
 }
 // font-family: 'Fjalla One', sans-serif;
  
