--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -9,4 +9,5 @@
 
 /* general */
 @import "components/header";
-// @import "components/footer";
+@import "components/video";
+@import "components/about";
