--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,25 +1,31 @@
 .header {
   background-color: #c6c6c6;
   position: relative;
-  min-height: 100vh;
   overflow: hidden;
+  min-height: 100vh;
 
   &__top {
-    @include flexb();
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
     position: relative;
     z-index: 9;
     padding: 35px 0;
+  }
 
+  &__bottom {
+    margin-bottom: 90px;
   }
 }
 
-.menu__btn {
+.button-menu {
   display: block;
   border: none;
   background-color: transparent;
   outline: none;
   width: 50px;
   height: 26px;
+  top: 5px;
   position: relative;
   padding: 0;
   z-index: 9;
@@ -44,14 +50,14 @@
   }
 }
 
-.menu__btn--active {
+.button-menu--active {
   transition: transform 0.3s;
   span {
     background-color: #303030;
     width: 32px;
     height: 3px;
     transform: rotate(-45deg);
-    left: 10px;
+    left: 9px;
     top: 12px;
     transition: transform 0.3s;
    
@@ -67,18 +73,14 @@
 }
 
 .menu {
-
   position: absolute;
   top: 0;
   right: 0;
-  padding: 150px 10px 150px;
+  padding: 150px 85px 150px;
   width: 442px;
   height: 100vh;
   background: rgba(230, 230, 230, 0.71);
-  backdrop-filter: blur(6px);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  backdrop-filter: blur(4px);
   z-index: 8;
   transform: translateX(100%);
   transition: transform 0.3s;
@@ -86,6 +88,7 @@
 
   &__item {
     margin-bottom: 27px;
+    display: block;
   }
 
   &__item:last-child {
@@ -100,12 +103,9 @@
     background-color: transparent;
     box-shadow: transparent;
     outline: transparent;
-  }
-
-  &__link:hover {
-    -webkit-box-shadow: -5px -5px 15px 0px rgba(0,0,0,0.51);
-    -moz-box-shadow: -5px -5px 15px 0px rgba(0,0,0,0.51);
-    box-shadow: -5px -5px 15px 0px rgba(0,0,0,0.51);
+    text-transform: uppercase;
+    max-width: 272px;
+    @include line-climp(2);
   }
 
   &__link:last-child {
@@ -123,11 +123,10 @@
 
   &__social--instagram:hover {
     path {
-      fill: #c13584;
+      fill: #b82377;
     }
   }
   
-
   &__social--spotify:hover {
     path {
       fill:#086616;
@@ -151,7 +150,186 @@
   transform: translateX(0%);
 }
 
+.header__content {
+  padding-top: 84px;
+}
+
+.header__swiper {
+  width: 100%;
+  height: 490px;
+  overflow: hidden;
+}
+
+.header__swiper-slide {
+  display: flex;
+}
+
+.header__swiper-text {
+  max-width: 513px;
+  width: 100%;
+}
+
+.header__title {
+  font-family: 'Fjalla One', sans-serif;
+  font-size: 90px;
+  line-height: 1.2;
+  font-weight: 400;
+  color: #303030;
+  margin-bottom: 10px;
+}
+
+.header__swiper-image {
+  width: 670px;
+  height: 470px;
+}
+
+.header__img {
+  width: 100%;
+  object-fit: contain;
+}
+
+.swiper-horizontal>.swiper-scrollbar {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 68px;
+  z-index: 50;
+  height: 3px;
+  width: 180px;
+}
+
+.swiper-scrollbar {
+  background: #B5B5B5;
+  cursor: pointer;
+}
+
+.swiper-scrollbar-drag {
+  background: #fff;
+  cursor: pointer;
+}
+
+// .swiper-horizontal>.swiper-pagination-progressbar, .swiper-pagination-progressbar.swiper-pagination-horizontal, .swiper-vertical>.swiper-pagination-progressbar.swiper-pagination-progressbar-opposite, .swiper-pagination-progressbar.swiper-pagination-vertical.swiper-pagination-progressbar-opposite {
+//   width: 180px;
+//   height: 3px;
+//   left: 50%;
+//   transform: translateX(-50%);
+//   top: 68px;
+// }
+
+// .swiper-pagination-progressbar-fill {
+//   background-color: #fff;
+// }
 
 
+.header__bottom {
+  @include flexb();
+}
 
+.header__items {
+  display: flex;
+}
 
+.header__item {
+  width: 228px;
+  height: 151px;
+  background-color: #ededed;
+  border-radius: 25px;
+  box-shadow: 0px 3.41156px 17.0578px rgba(0, 0, 0, 0.12);
+  display: flex;
+  flex-direction: column;
+  margin-right: 30px;
+}
+
+.header__item:last-child {
+  margin-right: 0;
+}
+
+.header__item-image {
+  position: relative;
+  height: 94px;
+}
+
+.header__item-img {
+  top: -63px;
+  left: 0;
+  width: 100%;
+  object-fit: contain;
+  position: absolute;
+}
+
+.header__item-content {
+  display: flex;
+}
+
+.header__item-price {
+  background-color: #303030;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #ededed;
+  padding: 4px 34px 3px 34px;
+  font-family: 'Fjalla One', sans-serif;
+  font-weight: 400;
+  margin-right: 34px;
+}
+
+.header__item-link {
+  display: inline-block;
+  font-family: 'Fjalla One', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  text-transform: uppercase;
+  position: relative;
+  color:#303030;
+
+  &::before {
+    content: '';
+    position: absolute;
+    background-image: url('../images/header/arrow-right.svg');
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 8px;
+    bottom: -3px;
+    left: 0;
+  }
+
+  &::before path {
+    fill:#303030;
+  }
+}
+
+.header__link {
+  font-size: 30px;
+  font-family: 'Fjalla One', sans-serif;
+  font-weight: 400;
+  text-transform: uppercase;
+  transform: rotate(-90deg);
+  color: #303030;
+  position: relative;
+  margin-right: -30px;
+  transition: color 0.3s, opacity 0.1s;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    background-image: url('../images/header/arrow-down.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    top: -35px;
+    right: 60px;
+    width: 15px;
+    height: 155px;
+    transform: rotate(90deg);
+  }
+
+  &:focus {
+    color: #929292;
+  }
+
+  &:hover {
+    color: #929292;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
