--- a/app/scss/components/_about.scss
+++ b/app/scss/components/_about.scss
@@ -1,3 +1,51 @@
 .about {
   padding: 90px 0 50px;
-}
+
+  &__image {
+    float: left;
+    margin-right: 65px;
+  }
+
+  &__items {
+    display: flex;
+    flex-direction: column;
+    align-items:flex-end;
+  }
+
+  &__item {
+    color: #ededed;
+    margin-bottom: 76px;
+    max-width: 570px;
+    width: 100%;
+  }
+
+  &__item:nth-child(2) {
+    margin-right: 120px;
+    img {
+      margin-right: 0;
+      margin-left: -15px;
+    }
+  }
+
+  &__item-heading {
+    display: flex;
+    align-items: center;
+  }
+
+  &__item-img {
+    width: 100px;
+    height: 90px;
+    margin-right: 15px;
+    object-fit: contain;
+  }
+
+  &__item-title {
+    text-transform: uppercase;
+    font-size: 35px;
+    line-height: 1.2;
+    font-family: 'Fjalla One', sans-serif;
+    font-weight: 400;
+    margin-bottom: 8px;
+    position: relative;
+  }
+} 
