--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -16,6 +16,183 @@
   &__bottom {
     margin-bottom: 90px;
   }
+
+  &__content {
+    padding-top: 84px;
+  }
+
+  &__swiper {
+    width: 100%;
+    height: 490px;
+  }
+
+  &__swiper-slide {
+    display: flex;
+  }
+
+  &__swiper-text {
+    max-width: 513px;
+    width: 100%;
+  }
+
+  &__title {
+    font-family: 'Fjalla One', sans-serif;
+    font-size: 90px;
+    line-height: 1.2;
+    font-weight: 400;
+    color: #303030;
+    margin-bottom: 10px;
+  }
+
+  &__swiper-image {
+    width: 670px;
+    height: 470px;
+  }
+
+  &__img {
+    width: 100%;
+    object-fit: contain;
+  }
+
+  &__bottom {
+    @include flexb();
+  }
+
+  &__items {
+    display: flex;
+  }
+
+  &__item {
+    width: 228px;
+    height: 151px;
+    background-color: #ededed;
+    border-radius: 25px;
+    box-shadow: 0px 3.41156px 17.0578px rgba(0, 0, 0, 0.12);
+    display: flex;
+    flex-direction: column;
+    margin-right: 30px;
+
+    &:hover {
+      .header__item-image {
+        transform: scale(1.15);
+      }
+    }
+  }
+
+  &__item:last-child {
+    margin-right: 0;
+  }
+
+  &__item-image {
+    position: relative;
+    height: 94px;
+    transition: transform ease 0.3s;
+  }
+
+  &__item-img {
+    top: -63px;
+    left: 0;
+    width: 100%;
+    object-fit: contain;
+    position: absolute;
+  }
+
+  &__item-content {
+    display: flex;
+  }
+
+  &__item-price {
+    background-color: #303030;
+    font-size: 16px;
+    line-height: 1.25;
+    color: #ededed;
+    padding: 4px 34px 3px 34px;
+    font-family: 'Fjalla One', sans-serif;
+    font-weight: 400;
+    margin-right: 34px;
+  }
+
+  &__item-link {
+    display: inline-block;
+    font-family: 'Fjalla One', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    text-transform: uppercase;
+    position: relative;
+    color:#303030;
+  
+    &::before {
+      content: '';
+      position: absolute;
+      background-image: url('../images/header/arrow-right.svg');
+      background-repeat: no-repeat;
+      width: 50px;
+      height: 8px;
+      bottom: -3px;
+      left: 0;
+    }
+  
+    &::before path {
+      fill:#303030;
+    }
+  }
+
+  &__link {
+    font-size: 30px;
+    font-family: 'Fjalla One', sans-serif;
+    font-weight: 400;
+    text-transform: uppercase;
+    transform: rotate(-90deg);
+    color: #303030;
+    position: relative;
+    margin-right: -30px;
+    transition: color 0.3s, opacity 0.1s;
+    
+    &::before {
+      content: '';
+      position: absolute;
+      background-image: url('../images/header/arrow-down.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      top: -35px;
+      right: 60px;
+      width: 15px;
+      height: 155px;
+      transform: rotate(90deg);
+    }
+  
+    &:focus {
+      color: #929292;
+    }
+  
+    &:hover {
+      color: #929292;
+    }
+  
+    &:active {
+      opacity: 0.3;
+    }
+  }
+}
+
+.swiper-horizontal>.swiper-scrollbar {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 68px;
+  z-index: 50;
+  height: 3px;
+  width: 180px;
+}
+
+.swiper-scrollbar {
+  background: #B5B5B5;
+  cursor: pointer;
+}
+
+.swiper-scrollbar-drag {
+  background: #fff;
+  cursor: pointer;
 }
 
 .button-menu {
@@ -61,7 +238,6 @@
     top: 12px;
     transition: transform 0.3s;
    
-
     &::before {
       transform: rotate(90deg);
       background-color: #303030;
@@ -82,7 +258,7 @@
   background: rgba(230, 230, 230, 0.71);
   backdrop-filter: blur(4px);
   z-index: 8;
-  transform: translateX(100%);
+  transform: translateX(150%);
   transition: transform 0.3s;
   overflow: auto;
 
@@ -150,64 +326,6 @@
   transform: translateX(0%);
 }
 
-.header__content {
-  padding-top: 84px;
-}
-
-.header__swiper {
-  width: 100%;
-  height: 490px;
-  overflow: hidden;
-}
-
-.header__swiper-slide {
-  display: flex;
-}
-
-.header__swiper-text {
-  max-width: 513px;
-  width: 100%;
-}
-
-.header__title {
-  font-family: 'Fjalla One', sans-serif;
-  font-size: 90px;
-  line-height: 1.2;
-  font-weight: 400;
-  color: #303030;
-  margin-bottom: 10px;
-}
-
-.header__swiper-image {
-  width: 670px;
-  height: 470px;
-}
-
-.header__img {
-  width: 100%;
-  object-fit: contain;
-}
-
-.swiper-horizontal>.swiper-scrollbar {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 68px;
-  z-index: 50;
-  height: 3px;
-  width: 180px;
-}
-
-.swiper-scrollbar {
-  background: #B5B5B5;
-  cursor: pointer;
-}
-
-.swiper-scrollbar-drag {
-  background: #fff;
-  cursor: pointer;
-}
-
 // .swiper-horizontal>.swiper-pagination-progressbar, .swiper-pagination-progressbar.swiper-pagination-horizontal, .swiper-vertical>.swiper-pagination-progressbar.swiper-pagination-progressbar-opposite, .swiper-pagination-progressbar.swiper-pagination-vertical.swiper-pagination-progressbar-opposite {
 //   width: 180px;
 //   height: 3px;
@@ -219,117 +337,3 @@
 // .swiper-pagination-progressbar-fill {
 //   background-color: #fff;
 // }
-
-
-.header__bottom {
-  @include flexb();
-}
-
-.header__items {
-  display: flex;
-}
-
-.header__item {
-  width: 228px;
-  height: 151px;
-  background-color: #ededed;
-  border-radius: 25px;
-  box-shadow: 0px 3.41156px 17.0578px rgba(0, 0, 0, 0.12);
-  display: flex;
-  flex-direction: column;
-  margin-right: 30px;
-}
-
-.header__item:last-child {
-  margin-right: 0;
-}
-
-.header__item-image {
-  position: relative;
-  height: 94px;
-}
-
-.header__item-img {
-  top: -63px;
-  left: 0;
-  width: 100%;
-  object-fit: contain;
-  position: absolute;
-}
-
-.header__item-content {
-  display: flex;
-}
-
-.header__item-price {
-  background-color: #303030;
-  font-size: 16px;
-  line-height: 1.25;
-  color: #ededed;
-  padding: 4px 34px 3px 34px;
-  font-family: 'Fjalla One', sans-serif;
-  font-weight: 400;
-  margin-right: 34px;
-}
-
-.header__item-link {
-  display: inline-block;
-  font-family: 'Fjalla One', sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  text-transform: uppercase;
-  position: relative;
-  color:#303030;
-
-  &::before {
-    content: '';
-    position: absolute;
-    background-image: url('../images/header/arrow-right.svg');
-    background-repeat: no-repeat;
-    width: 50px;
-    height: 8px;
-    bottom: -3px;
-    left: 0;
-  }
-
-  &::before path {
-    fill:#303030;
-  }
-}
-
-.header__link {
-  font-size: 30px;
-  font-family: 'Fjalla One', sans-serif;
-  font-weight: 400;
-  text-transform: uppercase;
-  transform: rotate(-90deg);
-  color: #303030;
-  position: relative;
-  margin-right: -30px;
-  transition: color 0.3s, opacity 0.1s;
-  
-  &::before {
-    content: '';
-    position: absolute;
-    background-image: url('../images/header/arrow-down.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-    top: -35px;
-    right: 60px;
-    width: 15px;
-    height: 155px;
-    transform: rotate(90deg);
-  }
-
-  &:focus {
-    color: #929292;
-  }
-
-  &:hover {
-    color: #929292;
-  }
-
-  &:active {
-    opacity: 0.3;
-  }
-}
