--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,3 +1,5 @@
 @import '../../node_modules/swiper/swiper-bundle';
 
 @import '../../node_modules/@fancyapps/ui/dist/fancybox';
+
+@import '../../node_modules/slick-carousel/slick/slick.scss';
