--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,16 +1,40 @@
 .header {
   background-color: #c6c6c6;
   position: relative;
-  overflow: hidden;
-  min-height: 100vh;
+  // overflow: hidden;
+  // min-height: 100vh;
+
+  .logo {
+    position: relative;
+    z-index: 18;
+  }
 
   &__top {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 22;
+    transition: background 0.3s;
+  }
+
+  &--scroll {
+    background: rgba(158, 158, 158, 0.7);
+    backdrop-filter: blur(4px);
+  }
+
+  &__top-inner {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
     position: relative;
-    z-index: 9;
     padding: 35px 0;
+    z-index: 23;
+  }
+
+  .header--scroll .header__top-inner {
+    padding: 25px 0;
+    transition: all 0.3s;
   }
 
   &__bottom {
@@ -18,7 +42,8 @@
   }
 
   &__content {
-    padding-top: 84px;
+    // padding-top: 84px;
+    padding-top: 193px;
   }
 
   &__swiper {
@@ -42,6 +67,7 @@
     font-weight: 400;
     color: #303030;
     margin-bottom: 10px;
+    text-transform: uppercase;
   }
 
   &__swiper-image {
@@ -52,6 +78,7 @@
   &__img {
     width: 100%;
     object-fit: contain;
+    margin-top: -10px;
   }
 
   &__bottom {
@@ -101,42 +128,6 @@
     display: flex;
   }
 
-  &__item-price {
-    background-color: #303030;
-    font-size: 16px;
-    line-height: 1.25;
-    color: #ededed;
-    padding: 4px 34px 3px 34px;
-    font-family: 'Fjalla One', sans-serif;
-    font-weight: 400;
-    margin-right: 34px;
-  }
-
-  &__item-link {
-    display: inline-block;
-    font-family: 'Fjalla One', sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    text-transform: uppercase;
-    position: relative;
-    color:#303030;
-  
-    &::before {
-      content: '';
-      position: absolute;
-      background-image: url('../images/header/arrow-right.svg');
-      background-repeat: no-repeat;
-      width: 50px;
-      height: 8px;
-      bottom: -3px;
-      left: 0;
-    }
-  
-    &::before path {
-      fill:#303030;
-    }
-  }
-
   &__link {
     font-size: 30px;
     font-family: 'Fjalla One', sans-serif;
@@ -159,6 +150,7 @@
       width: 15px;
       height: 155px;
       transform: rotate(90deg);
+      transition: right 0.3s;
     }
   
     &:focus {
@@ -167,6 +159,10 @@
   
     &:hover {
       color: #929292;
+
+      &::before {
+        right: 70px;
+      }
     }
   
     &:active {
@@ -180,7 +176,7 @@
   left: 50%;
   transform: translateX(-50%);
   top: 68px;
-  z-index: 50;
+  z-index: 18;
   height: 3px;
   width: 180px;
 }
@@ -195,6 +191,29 @@
   cursor: pointer;
 }
 
+.overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0, 0.5);
+  z-index: 19;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s, visibility 0.3s;
+}
+
+.overlay--active {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.3s, visibility 0.3s;
+}
+
+// .lock {
+//   overflow: hidden;
+// }
+
 .button-menu {
   display: block;
   border: none;
@@ -205,7 +224,7 @@
   top: 5px;
   position: relative;
   padding: 0;
-  z-index: 9;
+  z-index: 25;
 
   span {
     position: absolute;
@@ -249,7 +268,7 @@
 }
 
 .menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   padding: 150px 85px 150px;
@@ -257,7 +276,7 @@
   height: 100vh;
   background: rgba(230, 230, 230, 0.71);
   backdrop-filter: blur(4px);
-  z-index: 8;
+  z-index: 20;
   transform: translateX(150%);
   transition: transform 0.3s;
   overflow: auto;
@@ -282,24 +301,50 @@
     text-transform: uppercase;
     max-width: 272px;
     @include line-climp(2);
+    transition: color 0.3s;
   }
 
   &__link:last-child {
     padding-bottom: 0;
   }
 
+  &__link:focus {
+    color: #ededed;
+  }
+
+  &__link:hover{
+    color: #fff;
+  }
+
+  &__link:active {
+    opacity: 0.5;
+  }
+
   &__social {
     display: inline-block;
     margin-right: 16px;
+    outline: none;
   }
 
   &__social:last-child {
     margin-right: 0;
   }
 
+  &__social--instagram:focus {
+    path {
+      fill: #b82377;
+    }
+  }
+
   &__social--instagram:hover {
     path {
       fill: #b82377;
+    }
+  }
+
+  &__social--spotify:focus {
+    path {
+      fill:#086616;
     }
   }
   
@@ -309,9 +354,21 @@
     }
   }
 
+  &__social--pinterest:focus {
+    path {
+      fill:#bd0520;
+    }
+  }
+
   &__social--pinterest:hover {
     path {
       fill:#bd0520;
+    }
+  }
+
+  &__social--facebook:focus {
+    path {
+      fill:#3b5998;
     }
   }
 
