--- a/app/scss/components/_about.scss
+++ b/app/scss/components/_about.scss
@@ -1,15 +1,15 @@
 .about {
-  padding: 90px 0 50px;
+  padding: 90px 0 230px;
+  position: relative;
 
   &__inner {
     position: relative;
   } 
 
   &__image {
-    float: left;
-    margin-right: 65px;
+    position: absolute;
+    left: 0;
     max-width: 645px;
-    height: 554px;
 
     img {
       width: 100%;
