--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -3,3 +3,5 @@
 @import '../../node_modules/@fancyapps/ui/dist/fancybox';
 
 @import '../../node_modules/slick-carousel/slick/slick.scss';
+
+@import '../../node_modules/rateyo/src/jquery.rateyo';
