--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -5,3 +5,5 @@
 @import '../../node_modules/slick-carousel/slick/slick.scss';
 
 @import '../../node_modules/rateyo/src/jquery.rateyo';
+
+@import '../../node_modules/swiper/swiper-bundle';
