--- a/app/scss/components/_about.scss
+++ b/app/scss/components/_about.scss
@@ -73,7 +73,7 @@
   
   &__card {
     width: 100%;
-    height: 396px;
+    // height: 396px;
     background-color: #2D2D2D;
     border-radius: 25px;
     padding: 62px 40px;
@@ -82,6 +82,7 @@
 
   &__wrap {
     max-width: 602px;
+    width: 100%;
   }
 
   &__title {
@@ -97,13 +98,25 @@
     max-width: 602px;
     width: 100%;
     margin-bottom: 48px;
+    // @include line-climp (7);
+  }
+
+  &__items {
+    display: flex;
+    align-items: center;
   }
 
   &__info {
     display: flex;
+  }
+
+  &__descr {
+    margin-right: 90px;
+  }
+
+  .item-price {
     margin-left: -40px;
-    align-items: center;
-    margin-top: auto;
+    display: inline-block;
   }
 
   .item-link {
@@ -112,6 +125,7 @@
     font-size: 26px;
     transition: opacity 0.1s, color 0.3s;
     width: 124px;
+    margin-left: auto;
 
     &::before {
       content: '';
@@ -146,7 +160,8 @@
     padding: 10px 44px 9px 93px;
     max-width: 227px;
     font-size: 26px;
-    margin-right: 0;
+    margin-right: 20px;
+    order: -1;
   }
 
   .item-color,
@@ -154,16 +169,11 @@
     font-family: 'Fjalla One', sans-serif;
     font-weight: 400;
     text-transform: uppercase;
-    font-size: 26px;
+    font-size: 22px;
   }
 
   .item-color {
-    margin: 0 20px;
-  }
-
-  .item-available {
-   
-    margin-right: auto;
+    margin-right: 20px;
   }
 
   .slick-arrow {
@@ -248,6 +258,7 @@
   position: absolute;
   bottom: -125px;
   right: 90px;
+  min-width: 0;
 
   &__item {
     // width: 76%;
@@ -256,8 +267,8 @@
   &__box {
     padding: 0;
     margin: 0;
+    min-width: 0;
   }
-
 
   &__img {
     width: 100%;
