--- a/app/scss/components/_reviews.scss
+++ b/app/scss/components/_reviews.scss
@@ -195,7 +195,7 @@
   .reviews-slider__wrapper {
     display: flex;
   }
-
+ 
   .swiper-slide {
     margin-bottom: 0;
   }
@@ -208,6 +208,7 @@
     
     img {
       width: 100%;
+      height: 100%;
       object-fit: cover;
       border-radius: 50px;
       margin-top: -30px;
@@ -236,7 +237,7 @@
   .reviews-slider__text {
     font-size: 21px;
     max-width: 400px;
-    @include line-climp(4);
+    @include line-climp(5);
   }
 
   .swiper-scrollbar-drag {
