--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -48,6 +48,8 @@
   &__swiper {
     width: 100%;
     height: 490px;
+    overflow: hidden;
+    min-width: 0;
   }
 
   &__swiper-slide {
@@ -211,10 +213,6 @@
   transition: opacity 0.3s, visibility 0.3s;
 }
 
-// .lock {
-//   overflow: hidden;
-// }
-
 .menu {
   position: fixed;
   top: 0;
@@ -330,7 +328,7 @@
 .menu--active {
   transform: translateX(0%);
 }
-
+ 
 .button-menu {
   display: block;
   border: none;
@@ -342,7 +340,6 @@
   position: relative;
   padding: 0;
   z-index: 22;
-  overflow: hidden;
 
   span {
     position: absolute;
