--- a/app/scss/components/_reviews.scss
+++ b/app/scss/components/_reviews.scss
@@ -262,86 +262,33 @@
   cursor: pointer;
 }
 
+.swiper__box {
+  position: relative;
+}
 
-// .reviews-slider {
-//   max-width: 600px;
-//   width: 100%;
-//   height: 280px;
+.swipe-hidden {
+  display: none;
+  color: #929292;
+  font-size: 18px;
+  position: absolute;
+  width: 100px;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
 
-//   &__item {
-//     padding: 50px 0;
-//   }
+  &__arrows {
+    position: relative;
+  }
+ 
+  .swipe-top {
+    transform: rotate(90deg);
+    position: absolute;
+    right: 25px;
+  }
 
-//   &__wrapper {
-//     display: flex;
-//   }
-
-//   &__image {
-//     min-width: 97px;
-//     height: 97px;
-//     margin-right: 25px;
-//     position: relative;
-
-//     img {
-//       width: 100%;
-//       object-fit: cover;
-//       border-radius: 50px;
-//       margin-top: -30px;
-//     }
-//   }
-
-//   &__content {
-//     color: #303030;
-//     padding: 30px;
-//     background-color: #c6c6c6;
-//     box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.12);
-//     border-radius: 25px;
-//   }
-
-//   &__name{
-//     font-weight: 600;
-//     display: block;
-//     padding-bottom: 10px;
-//     text-transform: uppercase;
-//   }
-
-//   .star {
-//     margin-bottom: 10px;
-//   }
-
-//   &__text {
-//     font-size: 21px;
-//     max-width: 415px;
-//     @include line-climp(4);
-//   }
-
-//   .slick-dots {
-//     position: absolute;
-//     left: -150px;
-//     top: 50%;
-//     bottom: 0;
-//     transform: translateY(-50%);
-//     transform: rotate(90deg);
-//     display: flex;
-//   }
-
-//   .slick-dots li {
-//     line-height: 0;
-//     padding: 0;
-//   }
-
-//   .slick-dots button {
-//     font-size: 0;
-//     width: 150px;
-//     height: 2px;
-//     border:none;
-//     outline: none;
-//     background-color: #2D2D2D;
-//   }
-
-//   .slick-active {
-//     button {
-//       background-color: #ededed;
-//     }
-//   }
-// }
+  .swipe-bot {
+    transform: rotate(90deg);
+    position: absolute;
+    right: 5px;
+  }
+}
