--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -162,11 +162,12 @@
     opacity: 0.1;
   }
 }
-
+ 
 @media (max-width: 980px) {
   .header__swiper {
     height: 410px;
     margin-bottom: 100px;
+    overflow: inherit;
   }
 
   .header__swiper-slide {
@@ -333,6 +334,16 @@
   .about-subslider .arrow-right {
     right: 15px;
   }
+
+  .gallary__box {
+    flex-wrap: wrap;
+  }
+
+  .gallary__image {
+    margin: 10px 0;
+    height: 300px;
+    max-width:100%;
+  }
   
 }
 
@@ -487,6 +498,7 @@
 
   .header__bottom {
     padding-top: 40px;
+    margin-bottom: 50px;
   }
 
   .about__image {
@@ -521,6 +533,11 @@
   .reviews__content {
     max-width: 440px;
     width: 100%;
+  }
+
+  .gallary__image {
+    margin: 10px 0;
+    height: 250px;
   }
 
 }
@@ -571,10 +588,10 @@
     margin-bottom: 60px;
   }
 
-  .gallary__image {
-    height: 300px;
-    margin: 10px 0;
-  }
+  // .gallary__image {
+  //   height: 300px;
+  //   margin: 10px 0;
+  // }
 
   .swiper .reviews-slider__wrapper {
     display: block;
