--- a/app/scss/_mixin.scss
+++ b/app/scss/_mixin.scss
@@ -10,6 +10,9 @@
   align-items: center;
 }
 
+// @include flexb();
+// @include flexc();
+
 @mixin line-climp($row) {
   overflow: hidden; 
   text-overflow: ellipsis;
