--- a/app/scss/components/_specifications.scss
+++ b/app/scss/components/_specifications.scss
@@ -1,7 +1,6 @@
 .specifications {
   padding: 90px 0 90px;
 
-
   &__inner {
     padding-bottom: 200px;
     position: relative;
@@ -16,9 +15,7 @@
   &__image {
     position: relative;
     z-index: 4;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flexc();
 
     img {
       object-fit: cover;
@@ -77,7 +74,6 @@
   }
 
   .specifications__list-left{
-
     .specifications__item:first-child {
       top: 108px;
       left: 6px;
@@ -152,8 +148,7 @@
       right: 100px;
       bottom: -155px;
       max-width: 441px;
-     }
-    
+    }
   }
 
   &__item:nth-child(4) .specifications__subtitle::before{
@@ -199,9 +194,7 @@
     width: 100%;
     height: 386px;
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flexc();
     margin: 0 10px;
   } 
 
@@ -234,9 +227,7 @@
 
 .specifications-tabs {
   &__items {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flexc();
     text-align: center;
     flex-wrap: wrap;
     border-bottom: 1px solid #929292;
